--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -1,11 +1,11 @@
 <h1 class="mi-nombre">Elijah Townsend</h1>
 <img src="../../assets/images/mountains.jpg" alt="elijah in colorado" class="foto-de-viaje">
 
-<h2>Good <span>morning</span>! I am a technical product designer and a ultra endurance cyclist. My mission is to turn creative ideas into user centered experiences.</h2>
+<h2>Good <span>morning</span>! I am a technical product designer and an ultra endurance cyclist. My mission is to turn creative ideas into user centered experiences.</h2>
 
 <h3 class="donde-esta">Where are you now?</h3>
 
-<h3>I currently work at <a href="https://www.truist.com/" target="_blank">Truist</a>, the bank that formed due to BB&amp;T and Suntrust merger, as a Senior Experience Designer. We have been working hard to create a better interaction for our clients to their money. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2021.pdf" target="_blank" role="button">explore my resume</a>.</h3>
+<h3>I currently work at <a href="https://www.truist.com/" target="_blank">Truist</a>, the bank that formed due to the BB&amp;T and Suntrust merger, as a Senior Experience Designer. We have been working hard to create a better interaction for our clients to their money. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2021.pdf" target="_blank" role="button">explore my resume</a>.</h3>
 
 <h4 class="bicicletas">Bicycles</h4>
 
