--- a/projects/workshop/est-projects/branch-banking-trust/branch-banking-trust.component.html
+++ b/projects/workshop/est-projects/branch-banking-trust/branch-banking-trust.component.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    I was put on one of the retail web teams where we focused on accessibility and user-centered design for our enterprise platform, U. We designed with careful consideration for business requirements, user feedback and usability findings. One day, my product owner came to me and explained an issue we were having with users not being able to find certain features from the account details page. Customer service was being called because the users were unable to find account settings, order checks and other links. 
+    I was put on one of the retail web teams, where we focused on accessibility and user-centered design for our enterprise platform, U. We designed with careful consideration for business requirements, user feedback, and usability findings. One day, my product owner came to me and explained an issue we were having with users not being able to find certain features from the account details page. Customer service was being called due to the users being unable to find account settings, order checks, and find other needed links. 
   </p>
 
   <figure>
@@ -28,7 +28,7 @@
   </figure>
 
   <p>
-    The account settings that individuals were trying to find was specifc to the account that was selected and not your entire profile settings, which you could find in profile &amp; settings in the navigation. If you cannot find it, you would click on Manage Account on the right rail with the account links. The first recommendation I suggested was to make a content change. If the content does not tell you what you are clicking on, chances are the content is wrong. For alignment and consistency, that recommendation fell through the cracks. My second recommendation was to put secondary text under the account. 
+    The account settings that individuals were trying to find was specifc to the account that was selected and not your entire profile settings, which you could find in profile &amp; settings located in the navigation. If you cannot find it, you would click on Manage Account on the right rail with the account links. The first recommendation I suggested was to make a content change. If the content does not tell you what you are clicking on, chances are the content is wrong. For alignment and consistency, that recommendation fell through the cracks. My second recommendation was to put secondary text under the account. 
   </p>
 
   <figure>
@@ -37,6 +37,6 @@
   </figure>
 
   <p>
-    This recommendation was tested with users and came back as a successful solutions. User testing came back and told use with secondary text, we could direct the user wherever they needed to go. 
+    This recommendation was tested with users and came back as a successful solution. User research came back and told us with secondary text we could direct the user wherever they needed to go. 
   </p>
 </div>
