--- a/projects/workshop/est-projects/established-sixteen/established-sixteen.component.html
+++ b/projects/workshop/est-projects/established-sixteen/established-sixteen.component.html
@@ -15,7 +15,7 @@
 
 <div class="row">
   <p class="entry">
-    Before redesiging my personal portfolio site in 2016, I had redesigned it numerous times, but this time, I was proud of what I created.
+    Before redesiging my personal portfolio site in 2016, I had redesigned it numerous times, but this time I was proud of what I created.
   </p>
 
   <p>
@@ -37,7 +37,7 @@
   <img src="/assets/images/est1992/project.png" alt="mockup of est1992.com" height="1600" width="1200" />
 
   <p>
-    In this redesign, I wanted to focus on simplicity and minimalism. It was a great face lift from the last website while doing a great job of representing my portfolio and skills. The home page is built with Flexbox and the remaining pages are built using a responsive grid boilerplate called <a href="http://getskeleton.com/" target="_blank">Skeleton.css</a>. All functionality is written from skratch like my navigation, which you can find the code <a href="https://codepen.io/Eli-townsend/pen/gGYvyW" target="_blank">here</a>. Let me know what you think!
+    In this redesign, I wanted to focus on simplicity and minimalism. It was a great face lift from the last website while doing a great job of representing my portfolio and skills. The home page is built with Flexbox and the remaining pages are built using a responsive grid boilerplate called <a href="http://getskeleton.com/" target="_blank">Skeleton.css</a>. All functionality is written from scratch like my navigation, which you can find the code <a href="https://codepen.io/Eli-townsend/pen/gGYvyW" target="_blank">here</a>. Let me know what you think!
   </p>
   
   <img src="/assets/images/est1992/estfull.png" alt="full screenshot of est1992.com" height="3072" width="2000" />
