--- a/projects/workshop/est-projects/fixie-app/fixie-app.component.html
+++ b/projects/workshop/est-projects/fixie-app/fixie-app.component.html
@@ -15,11 +15,11 @@
 
 <div class="row">
   <p>
-    Fixie is a design challenge entry where I was able to bring the gap between two passions of mine, cycling and design.
+    Fixie is a design challenge entry where I was able to bridge the gap between two passions of mine - cycling and design.
   </p>
 
   <p>
-    While working at BB&amp;T, my manager created a March Madness tournament of designers called Design or Die. During this tournament, each round was a different yet specific challenge. The third round, also known as the final four in March Madness, was where we had to design mobile experiences and we could animate if we wanted too. This challenge really allowed me to design around my passion of cycling and create the app called Fixie. It was a great experience for being able to create something from scratch and also create some great interactions when the user wants to learn more about a frame and order one. This was designed with Sketch and animated in Principle. I am sure you are wondering about the results of the tournament, let's just say, I have a championship belt to prove it.
+    While working at BB&amp;T, my manager created a March Madness tournament of designers called Design or Die. During this tournament, each round was a different, yet specific challenge. The third round, also known as the final four in March Madness, was where we had to design mobile experiences and we could animate if we wanted. This challenge really allowed me to design around my passion of cycling and create the app called Fixie. It was a great experience for being able to create something from scratch and also create great interactions when the user wants to learn more about a frame and order one. This was designed with Sketch and animated in Principle. I am sure you are wondering about the results of the tournament, let's just say, I have a championship belt to prove it.
   </p>
 
   <video controls>
