--- a/projects/workshop/est-projects/tapples-banking/tapples-banking.component.html
+++ b/projects/workshop/est-projects/tapples-banking/tapples-banking.component.html
@@ -15,17 +15,17 @@
 
 <div class="row">
   <p class="entry">
-    Tapples is a design I created for the championship round of Design or Die, a tournament of every designer at BB&amp;T...a tournament I ended up winning. Another note, I did not pick the color scheme, the color scheme was picked by the opposing designer.
+    Tapples is a design I created for the championship round of Design or Die, a tournament that challenges every designer at BB&amp;T...a tournament I ended up winning. Another note, I did not pick the color scheme, the color scheme was picked by the opposing designer.
   </p>
 
   <img src="/assets/images/tapples/tapples1.png" alt="tapples image one" class="max-img" />
 
   <p>
-    The concept behind Tapples mobile banking app is that banking is for everyone and we all start on the same playing field. If you sign up to bank with Tapples, everyone starts out on with the same account and depending on your financial stability, your accound will be upgraded to another tier. Before we get into more detail about the banking methodologies, let's go over what issues Tapples would help solve. From working in finance, two constant battles from creator to user is education and stability. When I refer to education, I am not discussing interactions between the user and the bank, I am discussing the interaction between the user and their money. Most users do not follow a monthly budget or put very much money towards their savings in case of an emergency. When I discuss stability, I am talking about the stability of their finances. In case another covid happens, are you going to be able to be okay?
+    The concept behind Tapples mobile banking app is that banking is for everyone and we all start on the same playing field. If you sign up to bank with Tapples, everyone starts out on with the same account and depending on your financial stability, your accound will be upgraded to another tier. Before we get into more detail about the banking methodologies, let's go over what issues Tapples would help solve. From working in finance, two constant battles from creator to user is education and stability. When I refer to education, I am not discussing interactions between the user and the bank, I am discussing the interaction between the user and their money. Most users do not follow a monthly budget or put very much money towards their savings in case of an emergency. When I discuss stability, I am talking about the stability of their finances. In case another covid happens, are you going to be financialy stable?
   </p>
 
   <ul>
-    <li>Nearly one in 10 workers making $100,000+ live paycheck to paycheck</li>
+    <li>Nearly 1 in 10 workers making $100,000+ live paycheck to paycheck</li>
     <li>More than 1 in 4 workers do not set aside any savings each month</li>
     <li>Nearly 3 in 4 workers say they are in debt - and more than half think they always will be</li>
     <li>More than half of minimum wage workers say they have to work more than one job to make ends meet</li>
@@ -35,25 +35,25 @@
   <img src="/assets/images/tapples/tapples3.png" alt="tapples image three" />
 
   <p>
-    How do we fix these two areas of banking? First, we need to educate our users. We need to give them information on steps they can take to be come financially stable and leave them tips on how to bank better. Secondly, we need to try and set up the user to be more stable in the instance of disaster. We put it on their mind that we want them to have fun, but we also need to look out for them because we care about them. Third, we need to make banking more interactive, and not the interaction of moving money from account to account, but the interaction of persuading the user to save money or to create a budget or to pay off their loan. Lastly, we need to challenge our users in a fun way and reward them when they complete whatever task we have appointed them. 
+    How do we fix these two areas of banking? First, we need to educate our users. We need to give them information on steps they can take to become financially stable and provide them with tips on how to bank smarter. Secondly, we need to try and set up the user to be more stable in the instance of a disaster. We put it on their mind that we want them to have fun, but we also need to look out for them because we care. Third, we need to make banking more interactive, and not the interaction of moving money from account to account, but the interaction of persuading the user to save money or to create a budget or to pay off their loan. Lastly, we need to challenge our users in a different way and reward them when they complete whatever task we have appointed them. 
   </p>
 
   <img src="/assets/images/tapples/tapples4.png" alt="tapples image four" >
 
   <p>
-    Not only do users all have the same account, but they all start out on the same level. This is what I am calling the Tiered Banking System. We have a system that allows you to gain perks, complete task and become more financially stable based on the task that we give you. The task are everyday task that are easily achievable but usually people do not think about these steps. These task are not impossible, like performing three back flips to get free checking, personally I cannot do that, nor do I want to. It is as simple as opening up a Checking Add-On and depositing $200 into the new add-on. On the dashboard we want to show the current tier that the user is in and which tier is next to see the next achievable step along with the task it takes to get there. 
+    Not only do users all have the same account, but they all start out on the same level. This is what I am calling the Tiered Banking System. We have a system that allows you to gain perks, complete tasks and become more financially stable based on the task provided. The tasks are everyday things that are easily achievable but usually people do not think about these steps. These tasks are not impossible, like performing three back flips to get free checking, personally I cannot do that, nor do I want to. It is as simple as opening up a Checking Add-On and depositing $200 into the new add-on. On the dashboard we want to show the current tier that the user is in and which tier is next to see the next achievable step along with the task it takes to get there. 
   </p>
 
   <img src="/assets/images/tapples/tapples5.png" alt="tapples image five" />
 
   <p>
-    We have created a way to help improve the financial stability of our users and gave banking a gamification aspect, but what does that do for us? This allows us as a bank to encourage our users, lift them up when they make a mistake and give them praise when they accomplish something. We can also use this opportunity to promote our products and suggest which products would fit the needs of the user more. Looking at tier seven, you see that the task at hand are open a Roth IRA, that is the specific add-on that I am pushing for this example but, it can be any add-on, any credit card, and any account service like checks. Ultimately, this is our brand. We care about those who bank with us and we want them to be successful in every aspect of their life. We have the skills and resources to do that, we just have to get the ball rolling. By implementing something like the Tier Banking System, we can help prevent overdraft fees, penalties and even lower customer service calls. How can we lower customer service calls? By making the rewards useful to the users, for example overdraft fee waivers just in case they have a slip up but we are also educating the user moving forward, therefore, they will not continue to have these issues again
+    We have created a way to help improve the financial stability of our users and gave banking a gamification aspect, but what does that do for us? This allows us as a bank to encourage our users, lift them up when they make a mistake and give them praise when they accomplish something new. We can also use this opportunity to promote our products and suggest which products would fit the needs of the user more. Looking at tier seven, you see that the task at hand is to open a Roth IRA, that is the specific add-on that I am pushing for in this example but, it can be any add-on, any credit card, and any account service like checks. Ultimately, this is our brand. We care about those who bank with us and we want them to be successful in every aspect of their life. We have the skills and resources to do that, we just have to get the ball rolling. By implementing something like the Tier Banking System, we can help prevent overdraft fees, penalties, and even lower customer service calls. How can we lower customer service calls? By making the rewards useful to the users, for example overdraft fee waivers just in case they have a slip up but we are also educating the user moving forward, therefore, they will not continue to have these issues again.
   </p>
 
   <img src="/assets/images/tapples/tapples6.png" alt="tapples image six" />
   <img src="/assets/images/tapples/tapples7.png" alt="tapples image seven" />
 
   <p>
-    The interaction that we can have with the user after they complete a task should give them a sense of confidence and promote the move to further financial stability. Just like many applications: Duolingo, Garmin Connect, Todoist, Starbucks and many more, we can build better habits and more interaction through challenging our user, rewarding our user and showing the user that the moves they take will literally pay off in the end.
+    The interaction that we can have with the user after they complete a task should give them a sense of confidence and promote them to moving further into financial stability. Just like many applications: Duolingo, Garmin Connect, Todoist, Starbucks and many more, we can build better habits and more interaction through challenging our users, rewarding our user and showing the user that the moves they take will literally pay off in the end.
   </p>
 </div>
