--- a/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
+++ b/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
@@ -15,13 +15,13 @@
 
 <div class="row">
   <p class="entry">
-    What Is Cycling is a multi episode video series that features individual cyclist around the community and the different types of riding that makes them unique.
+    What Is Cycling is a multi episode video series that features individual cyclists around the community and the different types of riding that makes them unique.
   </p>
 
   <img src="/assets/images/what-is-cycling/wic-banner.jpg" alt="what is cycling banner" />
 
   <p>
-    What Is Cycling is not just a video series but a community project that I started to hopefully make cycling all inclusive so that everyone feels welcome and not intimidated. I heard a saying that goes like this, "if you are in a community, be apart of the community." Cycling is my community and this is how I want to help out with the community. It is simple, when I bike, I am going around and meeting people along the way and asking them different sets of questions: 
+    What Is Cycling is not just a video series but a community project that I started to hopefully make cycling all inclusive so that everyone feels welcome and not intimidated. I heard a saying that goes like this, "if you are in a community, be apart of the community." Cycling is my community and this is how I want to help out. It is simple, when I bike I am going around and meeting people along the way and asking them different sets of questions: 
   </p>
 
   <ol>
