--- a/projects/workshop/est-projects/odfl/odfl.component.html
+++ b/projects/workshop/est-projects/odfl/odfl.component.html
@@ -15,7 +15,7 @@
 
 <div class="row">
   <p class="entry">
-    Old Dominion Freight Line(ODFL) is a LTL truckload shipping company that is based out of Thomasville, North Carolina. You might not know who ODFL is, but think of them as UPS and Fedex's biggest competition.
+    Old Dominion Freight Line (ODFL) is a LTL truckload shipping company that is based out of Thomasville, North Carolina. You might not know who ODFL is, but think of them as UPS and Fedex's biggest competition.
   </p>
 
   <img src="/assets/images/odflland.jpg" alt="odfl web page image" class="max-img" />
@@ -49,7 +49,7 @@
   </figure>
 
   <p>
-    The mockups displayed a cleaner look for the header and footer along with different home/landing page layouts. Once we were able to define and provide the understanding of responsive design and mobile first, the business was on board with the direction that we were moving in. My team then created two hi-fidelity mockups for the business so that they could make the decision on which styles to create. We went through many iterations of design critiquing layout, changing color schemes and textures to business approval. ODFL.com was developed mobile first and simplified the process on numerous applications by removing steps to reach the same success criteria.
+    The mockups displayed a cleaner look for the header and footer along with different home/landing page layouts. Once we were able to define and provide the understanding of responsive design and mobile first, the business was on board with the direction that we were moving in. My team then created two hi-fidelity mockups for the business so that they could make the decision on styles. We went through many iterations of design critiquing layout, changing color schemes and textures for business approval. ODFL.com was developed mobile first and simplified the process on numerous applications by removing steps to reach the same success criteria.
   </p> 
 
   <figure>
@@ -57,7 +57,7 @@
     <figcaption>I know, nothing about this passes accessibility</figcaption>
   </figure>
 
-  <p>ODFL is very form and data heavy, therefore, simplifying the applications for customers saved their time and provided a service that they trusted. ODFL.com had 30,000+ daily users and generates over $3 billion dollars (2016). With 75% of the companies revenu coming from the website, we did extensive testing on the web applications utilizing google analytics to solidify our design decisions. If we saw a pattern of a high bounce rate through an application flow, we had to be able to pin point what the friction was and solve the issue, then we would reiterate this process. 
+  <p>ODFL is very form and data heavy, therefore, simplifying the applications for customers saved them time and provided a service they trusted. ODFL.com had 30,000+ daily users and generated over $3 billion dollars (2016). With 75% of the companies revenue coming from the website, we did extensive testing on the web applications utilizing Google Analytics to solidify our design decisions. If we saw a pattern of a high bounce rate through an application flow, we had to be able to pin point what the friction was and solve the issue, then we would reiterate this process. 
   </p>
 
   <figure class="est-margin-bottom-lg">
@@ -76,6 +76,6 @@
   </figure>
 
   <p>
-    Of course when you give users something completely new, they hate it because it looks different. Once the users used it and realized that many of the experiences were simplified or more functionality was added, they loved it. This was my first project at a corporate level and it was a great learning experience. 
+    Of course when you give users something completely new, they have trouble adapting because it looks different. Once customers were using the new website, many of the experiences were simplified or more functionality was added and they loved it. This was my first project at a corporate level and it was a great learning experience. 
   </p>
 </div>
