--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -51,7 +51,7 @@
     <est-workshop-blurb
       projectTitle="BB&amp;T"
       projectTag="UI Designer"
-      projectImgSrc="pilot.jpg"
+      projectImgSrc="bbtland.png"
       projectImgAlt="Pilot Pale Ale Image"
       projectLink="bbt"
     >
