new job change and truist added

--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -5,7 +5,7 @@
 
 <h3 class="donde-esta">Where are you now?</h3>
 
-<h3>I currently work at <a href="https://www.truist.com/" target="_blank">Truist</a>, the bank that formed due to the BB&amp;T and Suntrust merger, as a Senior Experience Designer. We have been working hard to create a better interaction for our clients to their money. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2021.pdf" target="_blank" role="button">explore my resume</a>.</h3>
+<h3>I currently work at <a href="https://www.findcenter.com/" target="_blank">FindCenter</a>, a personal development and growth platform, as a Senior Experience Designer. We have been working hard to create a safe place for individuals to learn and grow. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2021.pdf" target="_blank" role="button">explore my resume</a>.</h3>
 
 <h4 class="bicicletas">Bicycles</h4>
 
