--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -35,14 +35,14 @@
     >
     </est-workshop-blurb>
     
-    <!-- <est-workshop-blurb
+    <est-workshop-blurb
       projectTitle="Truist Retail Web"
       projectTag="UI"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
-      projectLink="pilot.html"
+      projectLink="truist"
     >
-    </est-workshop-blurb> -->
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
