--- a/src/app/est-header/est-header.component.html
+++ b/src/app/est-header/est-header.component.html
@@ -13,6 +13,6 @@
   <div class="nav-links">
     <a routerLink="/home" routerLinkActive="active-nav-selection" (click)="navToggle()">Home</a>
     <a routerLink="/workshop" routerLinkActive="active-nav-selection" (click)="navToggle()">Workshop</a>
-    <a routerLink="/journal" routerLinkActive="active-nav-selection" (click)="navToggle()">Journal</a>
+    <a href="https://elijahtownsend.blogspot.com/" target="_blank">Journal</a>
   </div>
 </div>
