truist olb added

--- a/projects/workshop/est-projects/truist-olb/truist-olb.component.html
+++ b/projects/workshop/est-projects/truist-olb/truist-olb.component.html
@@ -1,1 +1,26 @@
-<p>truist-olb works!</p>
+<est-project-entry
+  projectTitle="Truist Retail"
+  projectLink="https://www.truist.com/"
+  projectLinkName="View Truist Online Banking"
+  projectYear="2020"
+>
+  <ul class="color-scheme-list">
+    <li style="background: #2E1A47"></li>
+    <li style="background: #7C6992"></li>
+    <li style="background: #B0E0E2"></li>
+  </ul>
+</est-project-entry>
+
+<div class="clear"></div>
+
+<div class="row">
+  <p class="entry">
+    When BB&amp;T and SunTrust merged to form Truist, I remained on the retail team as a front-end developer. It was fun to work with such knowledgable people in a fast driven environment. Let's take a look at some of the application that I helped to develope.
+  </p>
+
+  <img src="/assets/images/oldScreenshot.jpeg" alt="truist online banking" class="max-img" />
+
+  <p>
+    The numbers are changed because this is now a live site. Our web application was developed in the JavaScript framework, Angular. I personally enjoyed learning Angular because it allowed me to use it moving forward in future projects...like this website! Creating components and working with a design system was amazing. The structure of the enterprise was we had a design systems team who create enterprise wide components and patterns. The next level, which is the level I was on, Retail, was the areas of focus teams. We incorporated the design system into our project and if we created a component that other teams needed, we could push the component into the design system where it would be tested and absorbed by the DS. 
+  </p>
+</div>
