--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -12,7 +12,7 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb> -->
-    
+
     <est-workshop-blurb
       projectTitle="What Is Cycling"
       projectTag="Creator"
@@ -34,11 +34,11 @@
       projectLink="tapples"
     >
     </est-workshop-blurb>
-    
+
     <est-workshop-blurb
       projectTitle="Truist Retail Web"
       projectTag="UI"
-      projectImgSrc="pilot.jpg"
+      projectImgSrc="olbScreenshot.jpeg"
       projectImgAlt="Pilot Pale Ale Image"
       projectLink="truist"
     >
@@ -56,7 +56,7 @@
       projectLink="bbt"
     >
     </est-workshop-blurb>
-    
+
     <est-workshop-blurb
       projectTitle="Fixie"
       projectTag="Mobile Designer"
@@ -78,7 +78,7 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb> -->
-    
+
     <est-workshop-blurb
       projectTitle="Horizontal Timeline"
       projectTag="UX"
@@ -100,7 +100,7 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb>
-    
+
     <est-workshop-blurb
       projectTitle="Trailer.."
       projectTag="Product Designer"
